Update github actions with updated path

--- a/.github/workflows/php-tests.yml
+++ b/.github/workflows/php-tests.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install Symfony CLI
         run: |
           curl -sS https://get.symfony.com/cli/installer | bash
-          mv /root/.symfony*/bin/symfony /usr/local/bin/symfony
+          mv /home/runner/.symfony5/bin/symfony /usr/local/bin/symfony
 
       - name: Validate composer.json and composer.lock
         run: composer validate --strict
