Update composer name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-username/food-truck",
+  "name": "david-comeau/food-truck",
   "description": "A Symfony console CLI application for searching and listing food trucks.",
   "type": "project",
   "license": "proprietary",
